Add navigation menu

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -5,3 +5,6 @@ de:
   address: "Blodigstraße 4/3. Stock, 80933 München"
   description: "Das Münchner Sprachfestival findet in der Stadtteilkultur statt, einem lebendigen Veranstaltungsort für inspirierende Veranstaltungen."
   switch_language: "Wechsle zu Englisch"
+  home: "Startseite"
+  agenda: "Programm"
+  speakers: "Redner"
