--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,4 +34,7 @@ en:
   address: "Blodigstraße 4/3. Floor, 80933 München"
   description: "The Munich Speech Festival will be held at Stadtteilkultur, a vibrant cultural venue known for hosting inspiring events."
   switch_language: "Switch to German"
+  home: "Home"
+  agenda: "Agenda"
+  speakers: "Speakers"
 
