Update the description for the drinks package

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -10,10 +10,13 @@ de:
     agenda: "Programm"
     speakers: "Redner"
   registrations:
+    yes: "Ja"
+    no: "Nein"
     new: "Neue Anmeldung"
     full_name: "Vollständiger Name"
-    drink_package: "Möchten Sie das Getränkepaket (€3,50) kaufen?"
-    lunch: "Möchten Sie am 23. ein Mittagessen bestellen?"
-    social: "Werden Sie am 22. am gesellschaftlichen Event teilnehmen?"
+    drink_package_22: "Möchtest du am 22. vor Ort Getränke haben (z. B. Cola, Tee, Kaffee usw.) für 3,50 €? Wähl 'Nein', wenn du deine eigenen mitbringst."
+    drink_package_23: "Möchtest du am 23. vor Ort Getränke haben (z. B. Cola, Tee, Kaffee usw.) für 3,50 €? Wähl 'Nein', wenn du deine eigenen mitbringst."
+    social: "Bist du beim coolen Social Event am 22. dabei? Dazu gehört auch das 'Tipps fürs Storytelling'-Event."
+    lunch: "Möchtest du am 23. Mittagessen? \nWähl 'Nein', wenn du dein eigenes mitbringst."
     register: "Registrieren"
     successful: "Anmeldung erfolgreich! Wir sehen uns bei der Veranstaltung."
