Localises the organised from

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2,6 +2,7 @@ de:
   welcome: "Münchner Sprachfestival"
   date: "22. und 23. März"
   register: "Kostenlos Anmelden!"
+  organised: "Organisiert von Toastmasters Gemeinschaft Bayern"
   address: "Blodigstraße 4/3. Stock, 80933 München"
   description: "Das Münchner Sprachfestival findet in der Stadtteilkultur statt, einem lebendigen Veranstaltungsort für inspirierende Veranstaltungen."
   switch_language: "Wechsle zu Englisch"
