--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,7 @@ en:
   welcome: "Munich Speech Festival"
   date: "22nd & 23rd of March"
   register: "Register For Free!"
+  organised: "Organised by Toastmasters Community Bavaria"
   address: "Blodigstraße 4/3. Floor, 80933 München"
   description: "The Munich Speech Festival will be held at Stadtteilkultur, a vibrant cultural venue known for hosting inspiring events."
   switch_language: "Switch to German"
