Translate story tellers night

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -23,10 +23,20 @@ de:
     lunch: "Möchtest du am 23. Mittagessen? \nWähl 'Nein', wenn du dein eigenes mitbringst."
     register: "Registrieren"
     successful: "Anmeldung erfolgreich! Wir sehen uns bei der Veranstaltung."
+  de:
   storytelling:
-    title: "Tipps zum Geschichtenerzählen"
-    description: "Die Storyteller's Night ist als monatliche Veranstaltung geplant, bei der Menschen Geschichten aus ihrem Leben teilen. Sie können glücklich, traurig, lustig oder gruselig sein. Hier gibt es alles! Wenn du möchtest, kannst du selbst eine Geschichte erzählen."
-    fb_link: "Besuche die Facebook-Seite"
-    event_details: "Begleite uns zu einem Abend voller Geschichten!"
-    event_date: "📅 Samstag, 22. März - Abendveranstaltung"
-    register: "Für die Veranstaltung anmelden"
+    title: "Erzählerisches Event"
+    visionary: "Der Visionär hinter <em>True Stories - München</em>"
+    date: "Datum - Wird noch bekannt gegeben"
+    introduction: "In einer Welt voller Geschichten, die erzählt werden wollen, wagte es ein Mann, einen Raum zu schaffen, in dem Stimmen gehört, Lachen widerhallt und Emotionen frei fließen können. Dieser Mann ist <strong>Kumar Barua</strong>, der visionäre Gründer von <em>True Stories - Munich</em>—einem zauberhaften monatlichen Treffen, wo Worte Welten weben und persönliche Erfahrungen in fesselnde Geschichten verwandelt werden."
+    welcome_text: "Egal ob es sich um eine herzerwärmende Erinnerung, ein zum Schießen komisches Abenteuer, eine gruselige Gespenstergeschichte oder eine Erzählung von Triumph handelt, <em>True Stories - Munich</em> heißt sie alle willkommen. Hier ist keine Geschichte zu klein und kein Gefühl zu groß. Es ist ein Ort, an dem Fremde über geteilte Erlebnisse zu Freunden werden, und wo jeder—ja, sogar du—die Bühne betreten kann, um seine Geschichte zu erzählen."
+    hints: "<strong>„Tipps fürs Geschichtenerzählen“</strong>, die Geheimnisse offenbart, wie man ein Publikum fesselt, Spannung aufbaut und die Zuhörer an jedem Wort hängen lässt."
+    event_promise: "Egal, ob du ein Geschichtenerzähler werden willst oder einfach nur gerne zuhörst, dieses Event verspricht einen Abend voller Lachen, Tränen und unvergesslicher Momente."
+  storytelling:
+    title: "Erzählerisches Event"
+    visionary: "Der Visionär hinter True Stories - München"
+    date: "Datum - Wird noch bekannt gegeben"
+    introduction: "In einer Welt voller Geschichten, die erzählt werden wollen, wagte es ein Mann, einen Raum zu schaffen, in dem Stimmen gehört, Lachen widerhallt und Emotionen frei fließen können. Dieser Mann ist <strong>Kumar Barua</strong>, der visionäre Gründer von <em>True Stories - Munich</em>—einem zauberhaften monatlichen Treffen, wo Worte Welten weben und persönliche Erfahrungen in fesselnde Geschichten verwandelt werden."
+    welcome_text: "Egal ob es sich um eine herzerwärmende Erinnerung, ein zum Schießen komisches Abenteuer, eine gruselige Gespenstergeschichte oder eine Erzählung von Triumph handelt, <em>True Stories - Munich</em> heißt sie alle willkommen. Hier ist keine Geschichte zu klein und kein Gefühl zu groß. Es ist ein Ort, an dem Fremde über geteilte Erlebnisse zu Freunden werden, und wo jeder—ja, sogar du—die Bühne betreten kann, um seine Geschichte zu erzählen."
+    hints: "<strong>„Tipps fürs Geschichtenerzählen“</strong>, die Geheimnisse offenbart, wie man ein Publikum fesselt, Spannung aufbaut und die Zuhörer an jedem Wort hängen lässt."
+    event_promise: "Egal, ob du ein Geschichtenerzähler werden willst oder einfach nur gerne zuhörst, dieses Event verspricht einen Abend voller Lachen, Tränen und unvergesslicher Momente."
