--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,10 +53,10 @@ en:
     register: "Register"
     successful: "Registration successful! See you at the event."
   storytelling:
-    title: "Tips on Storytelling"
-    description: "The Storyteller's Night is planned as a monthly event where people share stories from their lives. They can be happy, sad, funny or scary stories. This is a place where you get everything! If you want, you can be one of the storytellers."
-    fb_link: "Visit Facebook Page"
-    event_details: "Join us for an evening of storytelling!"
-    event_date: "📅 Saturday, 22nd March - Evening Social Event"
-    register: "Register for the Event"
-
+    title: "Storytelling Event"
+    visionary: "The Visionary Behind True Stories - Munich"
+    date: "Date - TBA"
+    introduction: "In a world brimming with stories waiting to be told, one man dared to create a space where voices could be heard, laughter could echo, and emotions could flow freely. That man is <strong>Kumar Barua</strong>, the visionary founder of <em>True Stories - Munich</em>—a magical monthly gathering where words weave worlds, and personal experiences turn into mesmerizing tales."
+    welcome_text: "Whether it’s a heartwarming memory, a side-splitting adventure, a chilling ghost story, or a tale of triumph, <em>True Stories - Munich</em> welcomes them all. Here, no story is too small, no emotion too big. It’s a place where strangers become friends over shared experiences, and where anyone—yes, even you—can take the stage to tell their tale."
+    hints: "<strong>“Hints for Storytelling”</strong>, revealing the secrets of captivating an audience, building suspense, and leaving listeners hanging onto every word."
+    event_promise: "Whether you aspire to be a storyteller or simply love to listen, this event promises an evening filled with laughter, tears, and unforgettable moments."
